added a* algorithm for heuristic search

--- a/Search/Search.csproj
+++ b/Search/Search.csproj
@@ -40,7 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AStarSearch.cs" />
     <Compile Include="BreadthFirstSearch.cs" />
+    <Compile Include="HeuristicNode.cs" />
+    <Compile Include="IHeuristicSearchProblem.cs" />
     <Compile Include="ISearchProblem.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
