--- a/CSharp/Search/Search.csproj
+++ b/CSharp/Search/Search.csproj
@@ -41,10 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AStarSearch.cs" />
+    <Compile Include="BaseTreeSearch.cs" />
     <Compile Include="BreadthFirstSearch.cs" />
     <Compile Include="HeuristicNode.cs" />
     <Compile Include="IHeuristicSearchProblem.cs" />
     <Compile Include="ISearchProblem.cs" />
+    <Compile Include="ITreeSearch.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
