add depth first search

--- a/CSharp/Search/Search.csproj
+++ b/CSharp/Search/Search.csproj
@@ -43,6 +43,7 @@
     <Compile Include="AStarSearch.cs" />
     <Compile Include="BaseTreeSearch.cs" />
     <Compile Include="BreadthFirstSearch.cs" />
+    <Compile Include="DepthFirstSearch.cs" />
     <Compile Include="HeuristicNode.cs" />
     <Compile Include="IHeuristicSearchProblem.cs" />
     <Compile Include="ISearchProblem.cs" />
