--- a/CSharp/Search/Search.csproj
+++ b/CSharp/Search/Search.csproj
@@ -50,6 +50,7 @@
     <Compile Include="ITreeSearch.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchResult.cs" />
     <Compile Include="State.cs" />
     <Compile Include="StateTransition.cs" />
   </ItemGroup>
